--- a/aye2/bin/.gitignore
+++ b/aye2/bin/.gitignore
@@ -1,13 +1,2 @@
-/aye2/
-/Hora/
-/Empleado/
-/Punto/
-/Fecha/
-/CuentaCorriente/
-/Monedero/
-/Microondas/
-/practica7/
-/practica7_Ejercicio4/
-/practica9/
-/practica8/
-/practica8_VehiculoMotorizado/
+/Estanteria/
+/practica_7_ej18/
